responsive-table/style.css
div[responsive-table] .nowrap {
  white-space: nowrap;
}

div[responsive-table] {
  --table-template: repeat(10, 1fr);
  --widget-table-spacing: var(--widget-content-horizontal-padding);
  --widget-table-spacing-half: calc(var(--widget-table-spacing) / 2);
  --widget-table-spacing-quarter: calc(var(--widget-table-spacing) / 4);
  display: flex;
  flex-direction: column;
  width: 100%;
  background: var(--color-widget-background);
  border-radius: var(--border-radius);
  border: 1px solid hsla(var(--bghs), calc(var(--scheme) (var(--scheme) var(--bgl) + 12%)), 0.5);
  box-shadow: 0px 3px 0px 0px hsl(var(--bghs), calc(var(--scheme) (var(--scheme) var(--bgl)) - 0.5%));
  backdrop-filter: var(--widget-background-blur, none);
}

div[responsive-table] [table-body] {
  flex: 1;
}

div[responsive-table] [table-header],
div[responsive-table] [table-row] {
  display: grid;
  grid-template-columns: var(--table-template);
  border-bottom: 1px solid hsla(var(--bghs), calc(var(--scheme) (var(--scheme) var(--bgl) + 12%)), 0.5);
  line-height: 4rem;
  padding: 0 var(--widget-table-spacing);
  gap: 1rem;
}

div[responsive-table] [table-header] {
  font-weight: bolder;
  border-bottom: 1px solid var(--color-popover-border);
  text-align: left;
  user-select: none;
  color: var(--color-text-highlight);
  background: var(--color-widget-background-highlight);
}

div[responsive-table] [table-header]>[data-as-collapsed-header] {
  display: none;
}

div[responsive-table] [table-header]>div,
div[responsive-table] [table-row]>div {
  min-width: 0;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  align-self: start;
}

div[responsive-table] [table-row] {
  animation: rowEntrance .3s cubic-bezier(0.25, 1, 0.5, 1) backwards;
}

div[responsive-table] [table-row]>[data-as-collapsed-column] {
  display: none;
}

@keyframes rowEntrance {
  from {
    opacity: 0;
    transform: translateX(5px);
  }
}

div[responsive-table].show {
  opacity: 1;
  display: flex;
  transform: scaleY(1);
}

div[responsive-table] {
  animation: fadeIn 0.5s backwards cubic-bezier(0.16, 1, 0.3, 1);
}

div[responsive-table] .table-sort {
  display: none;
  gap: 1rem;
  padding: 1rem;
  width: 100%;
  margin-bottom: 0.5rem;
}

div[responsive-table] .table-sort>label {
  display: flex;
  width: 100%;
  white-space: nowrap;
  align-items: center;
  gap: 1rem;
}

div[responsive-table] .table-sort-option {
  padding: 0.5rem 1rem;
  color: var(--color-text-highlight);
  background: var(--color-widget-background-highlight);
  border: 1px solid var(--color-widget-content-border);
  border-radius: var(--border-radius);
  cursor: pointer;
  transition: all 0.2s ease;
  width: 100%;
}

div[responsive-table] .table-sort-option:hover {
  border-color: var(--color-text-subdue);
}

div[responsive-table] .table-sort-option:focus {
  outline: none;
  border-color: var(--color-widget-content-border);
  box-shadow: 0 0 0 3px var(--color-widget-content-border);
}

div[responsive-table] .table-sort-direction {
  cursor: pointer;
  font-size: 20px;
  width: 22px;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  user-select: none;
}

div[responsive-table] .table-sort-direction[disabled] {
  opacity: .7;
  cursor: not-allowed;
}

div[responsive-table] [sortable] {
  cursor: pointer;
}

div[responsive-table] [sortable][data-sort-direction]:not([data-sort-direction="none"])::after,
div[responsive-table] .table-sort-direction[data-sort-direction]::after {
  content: '▲';
  display: inline-block;
  transition: transform 0.1s ease;
  margin-left: 0.5rem;
  backface-visibility: hidden;
  will-change: transform;
  transform-origin: center;
  transform-style: preserve-3d;
}


div[responsive-table] [sortable][data-sort-direction="desc"]::after,
div[responsive-table] .table-sort-direction[data-sort-direction="desc"]::after {
  transform: translateZ(0) rotate(180deg) rotate(0.0008deg);
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

div[responsive-table] .responsive-table-details {
  display: none;
}

div[responsive-table] .pagination-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  gap: 0.5rem;
  padding: 0.2rem 1rem;
  border-top: 1px solid var(--color-popover-border);
  background: var(--color-widget-background-highlight);
}

div[responsive-table] .pagination-summary {
  flex: 1 1 auto;
}

div[responsive-table] .pagination-buttons {
  flex: 1 1 auto;
  display: flex;
  flex-wrap: wrap;
  gap: 0.25rem;
  justify-content: flex-end;
  min-height: 3rem;
}

div[responsive-table] .pagination-buttons > .ellipses {
  align-content: flex-end;
  user-select: none;
  -moz-user-select: none;
}

div[responsive-table] .pagination-buttons > .page-btn {
  background: var(--color-widget-background);
  border-radius: var(--border-radius);
  width: 3rem;
  height: 3rem;
  padding: 0;
  text-align: center;
  color: var(--color-text-highlight);
}

div[responsive-table] .pagination-buttons > .page-btn.active {
  font-weight: bolder;
  color: var(--color-primary)
}

div[responsive-table] .pagination-buttons > .page-btn[disabled] {
  color: var(--color-text-subdue);
  cursor: not-allowed;
}

div[responsive-table] .page-ellipsis {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 3rem;
  height: 3rem;
  padding: 0;
  color: var(--color-text-base);
  user-select: none;
}

div[responsive-table] .collapsed-column-details > ul {
  margin-bottom: 1rem;
  padding: 0.5rem 1rem;
  background: var(--color-widget-background-highlight);
  border-radius: var(--border-radius);
}

div[responsive-table] .collapsed-column-details>ul>li {
  line-height: 2rem;
}

div[responsive-table] .collapsed-column-details>ul>li:not(:last-child) {
  border-bottom: 1px solid var(--color-popover-border);
}

div[responsive-table] .collapsed-column-details>summary {
  user-select: none;
  cursor: pointer;
}

div[responsive-table] .collapsed-column-details>summary::after {
  line-height: 2.3em;
}

div[responsive-table] .collapsed-column-details>summary::marker {
  font-size: 1.5rem;
}

@media (max-width: 768px) {
  div[responsive-table] {
    grid-template-columns: 1fr;
    background: none;
    border: none;
    box-shadow: none;
  }

  div[responsive-table] [table-row] {
    display: block;
    border: 1px solid var(--color-widget-content-border);
    margin-bottom: 1.5rem;
    background: var(--color-widget-background);
    border-radius: var(--border-radius);
    position: relative;
    padding: 4rem var(--widget-content-horizontal-padding) var(--widget-content-vertical-padding) var(--widget-content-horizontal-padding);
    line-height: 2rem;
  }

  div[responsive-table] [table-header] {
    display: none;
  }

  div[responsive-table] [table-row]>div[data-as-mobile-title] {
    position: absolute;
    left: 1rem;
    top: 1rem;
    color: var(--color-text-highlight);
    font-weight: bold;
    font-size: 1.5rem;
    display: unset;
  }

  div[responsive-table] [table-row]>div:not([data-as-mobile-title]) {
    display: none;
    grid-template-columns: 1fr 1.5fr;
    align-items: center;
    text-align: right;
    gap: 0.5rem;
  }

  div[responsive-table] [table-row]>div:not([data-as-mobile-title])::before {
    content: attr(data-label);
    color: var(--color-text-highlight);
    margin-right: 0.5rem;
    text-align: left;
  }

  div[responsive-table] [table-row]>div:last-child {
    margin-bottom: 0;
  }

  div[responsive-table] [table-row]>div[data-show-on-mobile] {
    display: grid;
  }

  div[responsive-table] .table-sort {
    display: flex;
  }

  div[responsive-table] .responsive-table-details {
    display: block;
    padding: 0 1rem 0.2rem;
    background: var(--color-popover-background);
  }

  div[responsive-table] .responsive-table-details>summary {
    color: var(--color-text-base);
  }

  div[responsive-table] .pagination-container {
    flex-direction: column;
    align-items: center;
    text-align: center;
    border-top: unset;
    background: unset;
  }

  div[responsive-table] .collapsed-column-details {
    pointer-events: none;
  }

  div[responsive-table] .collapsed-column-details>summary {
    list-style: none;
  }

  div[responsive-table] .collapsed-column-details[open]>:not(summary) {
    display: none;
  }

  div[responsive-table] .collapsed-column-details>summary::-webkit-details-marker {
    display: none;
  }

  div[responsive-table] [hide-on-mobile] {
    display: none !important;
  }

  div[responsive-table] [table-header]>div,
  div[responsive-table] [table-row]>div {
    padding-right: unset;
  }
}

